--- a/src/Component/Shopingsection/Productdetails/Product.module.css
+++ b/src/Component/Shopingsection/Productdetails/Product.module.css
@@ -15,6 +15,7 @@
   -ms-overflow-style: none;
   scrollbar-width: none;
   overflow-x: scroll;
+  gap: 10px;
 }
 .sizes::-webkit-scrollbar {
   display: none;
@@ -333,7 +334,7 @@
   align-items: center;
 }
 .descrip {
-  margin-left: 12px;
+  margin-left: 40px;
   width: 98%;
 }
 .text1 {
