--- a/src/Component/Navbar/Profile/SellerDashboard/ProductSec/Addproduct.module.css
+++ b/src/Component/Navbar/Profile/SellerDashboard/ProductSec/Addproduct.module.css
@@ -253,18 +253,19 @@ flex-direction: column;
 
 .headingdiv {
   width: 100%;
+  background-color: rgb(247, 251, 255);
+
   height: 70px;
 }
 .headingText {
   font-weight: bold;
-  /* margin-right: 1000px; */
-  /* margin-top: 10px; */
-  margin: 10px;
+  margin-right: 1000px;
+  margin-top: 10px;
 }
 .maindiv {
   display: flex;
   flex-direction: row;
-  margin-top: 10px;
+  /* margin-top: 10px; */
   padding: 10px;
   width: 100%;
   height: 100%;
@@ -272,15 +273,12 @@ flex-direction: column;
 }
 .mainone {
   /* margin-left: 100px; */
-  margin: 20px;
   width: 50%;
   background-color: rgb(247, 251, 255);
 }
 .maintwo {
-  margin: 10px;
   width: 50%;
   background-color: rgb(247, 251, 255);
-  /* background:white */
 }
 .inputDiv {
   display: flex;
