--- a/src/Component/Navbar/Franchise/Franchise.module.css
+++ b/src/Component/Navbar/Franchise/Franchise.module.css
@@ -33,6 +33,9 @@
     font-size: 40px;
     font-weight: 600;
   }
+  .margbot{
+    margin-bottom: 5rem;
+  }
   .parag{
     text-align: center;
     font-size: 16px;
