--- a/src/Component/Shopingsection/Productdetails/Product.module.css
+++ b/src/Component/Shopingsection/Productdetails/Product.module.css
@@ -3,6 +3,10 @@
   font-weight: bolder;
   /* font-weight: 60px; */
 }
+.iggg{
+  width: 770px;
+  height: 30rem;
+}
 .card {
   background: white;
   overflow: hidden;
