--- a/src/Component/Header/Home/TopTrends/Trends.module.css
+++ b/src/Component/Header/Home/TopTrends/Trends.module.css
@@ -9,6 +9,7 @@
 .hhhhaa{
   font-weight: 700;
 }
+
 .card {
  
   display: flex;
@@ -16,7 +17,8 @@
   width: 16rem;
   margin-top: 1rem;
   margin-bottom: 1rem;
-  background-color:#fff;
+  margin-right: 20px;
+  /* background-color:#fff; */
   height: 400px;
   width: 500px;
   border-radius: 10px;
@@ -25,44 +27,15 @@
 }
 .bg{
   background-color: #fff;
-
+  margin-top: 1rem;
 
 }
 
-.card img {
-  display: block;
-  margin: 0 auto;
-  max-width: 100%;
-  height: 25rem;
-  width: 600px;
-}
 /* .seeMore{
   margin-left: 35rem;
 } */
-@media only screen and (max-width: 768px) {
-  /* .card {
-    width: 100%;
-    height: auto;
-  } */
 
-  .card img {
-    height: 25rem;
-    border-radius: 10px 10px 0 0;
-  }
-}
-@media only screen and (max-width: 589px) {
-  .card {
-    width: 14rem;
-  }
 
-  .card img {
-    height: 20rem;
-    border-radius: 10px 10px 0 0;
-  }
-  .seeMore{
-    margin-left: 10rem;
-  }
-}
 .card h2 {
   font-size: 24px;
   margin-top: 20px;
@@ -71,6 +44,14 @@
 .card p {
   font-size: 16px;
   margin-top: 10px;
+}
+
+.card img {
+  display: block;
+  margin: 0 auto;
+  max-width: 100%;
+  height: 350px;
+  width: 450px;
 }
 
 /* .customerheading {
@@ -167,6 +148,7 @@
   width: 100px;
 }
 }
+
 @media only screen and (max-width: 589px) {
   
   .card {
@@ -181,5 +163,10 @@
     width: 220px;
     border-radius: 10px;
     /* box-shadow: 0 2px 8px rgba(34, 9, 9, 0.878); */
+}
+
+
+.seeMore{
+  margin-left: 10rem;
 }
 }
