--- a/src/Component/Navbar/Search/SearchBar.module.css
+++ b/src/Component/Navbar/Search/SearchBar.module.css
@@ -1,12 +1,64 @@
-  .container {
+/* .container {
     position: relative;
-    margin-right: 400px;
+    margin-right: 300px;
   }
   
-  .Searchinput {
+  .input {
+    border-radius: 5px;
     background-color: #d9d9d9;
+    width: 400px;
+    height: 35px;
+    padding-left: 30px;
+  }
+  
+  .searchIcon {
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    transform: translateY(-50%);
+    color: #888;
+  }
+  
+  .resultsContainer {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 999;
+    background-color: white;
+  }
+  
+  .resultsContainer ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .resultsContainer li {
+    padding: 10px;
+  }
+  
+  .link {
+    text-decoration: none;
+    color: black;
+  }
+  @media (max-width: 600px) {
+    .container {
+      margin-right: 0;
+    }
+  
+    .input {
+      width: 100%;
+    }
+  } */
+
+  .container {
+    position: relative;
+    margin-right: 300px;
+  }
+  
+  .input {
     border-radius: 8px;
-    border: none;
+    background-color: #d9d9d9;
     outline: none;
     width: 400px;
     height: 35px;
