--- a/src/Component/Footer/Footer.module.css
+++ b/src/Component/Footer/Footer.module.css
@@ -1,5 +1,5 @@
 .main {
-  height: 400px;
+  height: 450px;
   width: 100%;
   background-color: black;
   display: flex;
@@ -103,6 +103,7 @@
   color: white;
   text-decoration: none;
   font-weight: bolder;
+  margin-top: 1rem;
 }
 .listmain {
   display: flex;
@@ -113,8 +114,12 @@
   flex-direction: column;
   gap: 20px;
   margin-left: 100px;
+  
 }
-
+.links{
+  margin: 0.4rem;
+  color: aliceblue;
+}
 .hhhhh {
   /* background-color: #183865; */
   display: flex;
