--- a/src/Component/Footer/FAQ/FaQ.module.css
+++ b/src/Component/Footer/FAQ/FaQ.module.css
@@ -13,3 +13,30 @@
     font-size: 25px;
     /* margin-top: 4rem; */
   }
+  .wholesaleP{
+    font-weight: 500;
+    font-size: 16px;
+    margin-left: 4rem;
+    margin-top: 1rem;
+
+
+  }
+  .wholesale{
+    color: #030303;
+  }
+  .wholesaleH1{
+    font-weight: 700;
+    font-size: 16px;
+    margin-top: 2rem;
+    margin-left: 3.8rem;
+  }
+  .bott{
+    margin-left: 22rem;
+    margin-bottom: 5rem;
+  }
+  @media screen and (max-width: 600px) {
+    .bott{
+      margin-left: 0;
+      margin-bottom: 5rem;
+    }
+  }
