--- a/src/Component/Shopingsection/Shopping.module.css
+++ b/src/Component/Shopingsection/Shopping.module.css
@@ -19,14 +19,15 @@
 }
 
 .paginateLabel {
-  gap: 10px; /* Adjust the value as needed to add space */
+  gap: 10px; 
 }
-/* pagination.css */
+
 
 .pagination {
   display: flex;
   list-style: none;
   padding: 0;
+  font-family:"Martian Mono, monospace";
 }
 
 .pagination li {
