--- a/src/Component/Shopingsection/SellerRelatedProduct/sellerrelated.module.css
+++ b/src/Component/Shopingsection/SellerRelatedProduct/sellerrelated.module.css
@@ -16,7 +16,7 @@
     background-color:#fff;
     height: 400px;
     border-radius: 10px;
-    box-shadow: 0 2px 8px rgba(196, 38, 38, 0.878);
+    box-shadow: 0 2px 8px rgba(168, 163, 163, 0.878);
     
   }
   .bg{
@@ -24,14 +24,17 @@
     margin-top: 1rem;
   
   }
-  
-  .card img {
+  .igfff{
+    width: 20rem;
+    height: 20rem;
+  }
+  /* .card img {
     display: block;
     margin: 0 auto;
-    max-width: 15.9rem;
+    width: 15.9rem;
     height: 19rem;
     border-radius: 0.6rem;
-  }
+  } */
   .seeMore{
     background-color: #e3272a; 
     border: none;
@@ -46,6 +49,25 @@
     margin-left: 35rem;
     
   }
+  .titlee{
+    font-size: 16px;
+    font-weight: 400;
+    margin-left:2rem
+  }
+  .title{
+    margin-left: 0.5rem;
+    margin-bottom: 0.5rem;
+    margin-top: -6rem;
+    margin-left:2rem;
+    font-weight: 600;
+    white-space: nowrap;
+    overflow: hidden
+
+
+    /* font-weight:lighter */
+    ;
+  
+  }
   @media only screen and (max-width: 768px) {
 
   
@@ -56,11 +78,12 @@
   }
   @media only screen and (max-width: 589px) {
     .card {
-      width: 14rem;
+      width: 15.26rem;
     }
   
     .card img {
       height: 20rem;
+      width: 15rem;
       border-radius: 10px 10px 0 0;
     }
     .seeMore{
@@ -76,6 +99,31 @@
       display: inline-block;
       font-size: 16px;
     }
+    .title{
+      margin-left: 0.5rem;
+      margin-bottom: 0.5rem;
+      margin-top: -6rem;
+      margin-left:2rem;
+      font-weight: 600;
+      overflow: hidden;
+      white-space: nowrap;
+
+
+  
+  
+      /* font-weight:lighter */
+      ;
+    
+    }
+    .titlee{
+      font-size: 16px;
+      font-weight: 400;
+      margin-left:2rem;
+      white-space: nowrap;
+      overflow: hidden;
+
+    }
+
   }
   .card h2 {
     font-size: 24px;
@@ -130,16 +178,10 @@
     margin-left: 0.5rem;
     overflow: hidden;
   }
-  .title{
-    margin-left: 0.5rem;
-    margin-bottom: 0.5rem;
-    margin-top: 1rem;
-
-
-    /* font-weight:lighter */
-    ;
-  
+  .marbtm{
+    margin-bottom: 6rem;
   }
+  
 .mage{   
    height: 5rem
   }
