--- a/src/Component/Header/Home/WhoSection/Whydetail/Whydetail.module.css
+++ b/src/Component/Header/Home/WhoSection/Whydetail/Whydetail.module.css
@@ -1,7 +1,7 @@
 .one{
     height: 500px;
     width: 100%;
-    background-image: url('https://img.freepik.com/free-photo/frame-with-leaves-it-frame-with-words-autumn-it_1340-24635.jpg?t=st=1687594718~exp=1687595318~hmac=1a6134e954c67a205565da033bc7ebd589d79be2ac3a58bcedf3f2848174200c&w=2000');
+    background-image: url('../../../../../images/whyus.png');
 background-size: cover;
 
 }
