--- a/src/Component/Header/Home/AboutSection/About.module.css
+++ b/src/Component/Header/Home/AboutSection/About.module.css
@@ -33,7 +33,7 @@
   align-items: center;
   bottom: 0;
   width: 100%;
-  height: 30%;
+  height: 35%;
   background-color: white;
 }
 
@@ -44,12 +44,10 @@
   align-items: center;
   background-color: white;
   flex-direction: column;
+  margin-bottom: 250px;
+  margin-top: -150px;
 }
-.headingcontent1:hover{
-  animation: fadeInAnimation ease 3s;
-  animation-iteration-count: 1;
-  animation-fill-mode: forwards;
-}
+
 
 .lastmaindiv{
   position: relative;
@@ -79,8 +77,11 @@
 .Headingtextlast{
   text-align: left;
   font-weight: bolder;
-  margin-left: 20px;
   font-size: larger;
+  display: flex;
+  justify-content: left;
+  text-align: left;
+  margin-right: 370px;
 }
 .contenttextlast{
   margin-top: 20px;
@@ -112,8 +113,6 @@
   text-align: center;
   letter-spacing: 2px;
   font-size: large;
-  line-height: 35px;
-
 }
 .contenttext{
   margin-top: 20px;
@@ -152,7 +151,6 @@
   right: 0;
   width: 45%;
   height: 40%;
-  margin-top: 300px;
 
 }
 .ourvision{
@@ -164,6 +162,10 @@
   background-color: white;
   margin-bottom: 160px;
   margin-left: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 .mainvision{
   position: relative;
@@ -190,7 +192,7 @@
 
 .secndimg{
   width: 100%;
-  height: 900px
+  height: 1100px
   
 
 }
@@ -220,6 +222,9 @@
     margin-left: 20px;
     font-size: larger;
     color: white;
+    display: flex;
+    margin-right: 0px;
+    
   }
   .headingcontentfirst{
     position: relative;
@@ -349,11 +354,11 @@
   
 }
 
-@keyframes fadeInAnimation {
+/* @keyframes fadeInAnimation {
   0% {
       opacity: 0;
   }
   100% {
       opacity: 1;
   }
-}
+} */
