--- a/src/Component/Shopingsection/Productdetails/Product.module.css
+++ b/src/Component/Shopingsection/Productdetails/Product.module.css
@@ -325,8 +325,11 @@
 .text1 {
   font-weight: 0.1rem;
   height: 50px;
-  width: 20px;
-  white-space: nowrap;
+  overflow-wrap: break-word; 
+  word-wrap: break-word; 
+  word-break: break-word; 
+
+  
 }
 @media (min-width: 100px) and (max-width: 640px) {
   .text1 {
