--- a/src/Component/Shopingsection/Shopping.module.css
+++ b/src/Component/Shopingsection/Shopping.module.css
@@ -10,8 +10,18 @@
 }
 
 .tittt {
+  font-size: 16px;
+  /* font-weight: bold; */
+  text-transform: uppercase;
+  font-family: "Martian Mono, monospace";
   white-space: nowrap;
   overflow: hidden;
+}
+
+.price {
+  font-weight: bold;
+  font-size: 13px;
+  margin: 4px;
 }
 
 .icon-hover:hover i {
@@ -19,15 +29,15 @@
 }
 
 .paginateLabel {
-  gap: 10px; 
+  gap: 10px;
 }
-
 
 .pagination {
   display: flex;
   list-style: none;
   padding: 0;
-  font-family:"Martian Mono, monospace";
+  font-family: "Martian Mono, monospace";
+  color: white;
 }
 
 .pagination li {
@@ -37,19 +47,19 @@
 .pagination li a {
   display: inline-block;
   padding: 10px 15px;
-  background-color: #ee0505;
+  background: #bf0a2a;
   color: #fff;
   border-radius: 10px;
   text-decoration: none;
 }
 
-.pagination li.active a {
-  background-color: #e74c3c;
-}
+/* .pagination li.active a {
+  background: #BF0A2A;
+} */
 
-.pagination li a:hover {
+/* .pagination li a:hover {
   background-color: #a5aea3;
-}
+} */
 
 .card-text {
   white-space: nowrap;
@@ -217,7 +227,7 @@
 }
 
 /* .like_button :hover {
-  color: red;
+  color: #BF0A2A;
 } */
 .loadingSpinner {
   margin-top: 20%;
@@ -258,7 +268,7 @@
   }
   .tittt {
     font-size: 10px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   }
 }
 
