--- a/src/Component/Test/Test.module.css
+++ b/src/Component/Test/Test.module.css
@@ -123,6 +123,7 @@ font-weight: bold;
         background-color: white;
        display: flex;
        flex-direction: column;
+       overflow-x: scroll;
 
        
     }
@@ -133,6 +134,7 @@ font-weight: bold;
        width: 100%;
        background-color: white;
        overflow-x: scroll;
+       margin-left: 0px;
     }
     .four{
         display: flex;
