--- a/src/Component/Shopingsection/Productdetails/Product.module.css
+++ b/src/Component/Shopingsection/Productdetails/Product.module.css
@@ -74,6 +74,11 @@
 
 /* /////////////latest/////////////
 */
+.descPara {
+  margin-left: 80px;
+  width: 75%;
+}
+
 
 .heads {
   display: flex;
@@ -240,7 +245,7 @@
 
 .descrips {
   margin-left: 40px;
-  margin-top: 50px;
+  /* margin-top: 50px; */
 }
 
 @media (min-width: 100px) and (max-width: 900px) {
@@ -257,12 +262,10 @@
     border-top: 0.3rem solid rgb(141, 137, 137);
     width: 80%;
     margin-right: 20px;
-
-    /* margin-right: 30rem; */
   }
   .descrips {
     margin-left: 40px;
-    margin-top: 210px;
+    /* margin-top: 210px; */
   }
 }
 
@@ -336,7 +339,7 @@
   .text1 {
     font-weight: 14px;
     height: 50px;
-    width: 20px;
+    /* width: 20px; */
     white-space: wrap;
   }
   .text12 {
@@ -357,6 +360,9 @@
     align-items: "center";
     /* flex-direction: row; */
     font-weight: 0.1rem;
+  }
+  .descPara {
+    margin-left: 0;
   }
   .checkbox {
     font-weight: 0.1rem;
