--- a/src/Component/Dashboard/AddProduct/Addproduct.module.css
+++ b/src/Component/Dashboard/AddProduct/Addproduct.module.css
@@ -222,6 +222,7 @@ flex-direction: column;
   .sizeselect {
     font-weight: bolder;
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     margin-left: 170px;
