--- a/src/Component/Pages/Shop Section/Product Details/Product.module.css
+++ b/src/Component/Pages/Shop Section/Product Details/Product.module.css
@@ -133,7 +133,6 @@
 .sizeresponsive {
   display: flex;
   flex-direction: row;
-  /* left: 0;fle */
   justify-content: start;
   -ms-overflow-style: none;
   scrollbar-width: none;
@@ -229,17 +228,12 @@
 }
 
 .color_box_border {
-  width: 70px;
-  height: 70px;
+
  
 }
 
 
-.color_box:hover {
-  /* background:black; */
-  /* padding: 10px; */
-  border: 5px solid rgb(5, 0, 10);
-}
+
 
 .footer {
   display: flex;
@@ -247,7 +241,6 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  background-color: black;
 }
 
 .descrips {
@@ -307,10 +300,10 @@
 }
 
 .desgin {
-  margin-left: 20px;
+  /* margin-left: 20px; */
   color: #d70a2a;
   height: 60px;
-  width: 5rem;
+  width: 7rem;
   font-weight: bold;
   display: flex;
   flex-direction: column;
@@ -362,7 +355,6 @@
   }
   .tottal {
     margin: 10px;
-    margin-left: -1rem;
     display: flex;
     justify-content: "center";
     align-items: "center";
@@ -393,7 +385,7 @@
   flex-direction: row;
   background-color: #bf0a2a;
   border-radius: 0rem;
-  width: 370px;
+  width: 384px;
   height: 65px;
   color: #f5f5f5;
   justify-content: center;
