--- a/src/Component/Header/Home/NewArrival/NewArrival.module.css
+++ b/src/Component/Header/Home/NewArrival/NewArrival.module.css
@@ -1,20 +1,18 @@
-
 .sliderContainer {
   margin: 0 auto;
   max-width: 1600px;
   padding: 0 20px;
   height: 600px;
-
 }
-.hhhhaa{
+.hhhhaa {
   font-weight: 700;
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: x-large;
 }
 
 .card {
- 
   display: flex;
   flex-direction: column;
   width: 16rem;
@@ -26,18 +24,15 @@
   width: 500px;
   border-radius: 10px;
   /* box-shadow: 0 2px 8px rgba(34, 9, 9, 0.878); */
-  
 }
-.bg{
+.bg {
   background-color: #fff;
   margin-top: 1rem;
-
 }
 
 /* .seeMore{
   margin-left: 35rem;
 } */
-
 
 .card h2 {
   font-size: 24px;
@@ -91,85 +86,71 @@
   font-size: 25px;
 }
 
-.prices{
+.prices {
   margin-left: 0.5rem;
   margin-top: -1rem;
-  
 }
 
-.description{
-  margin-top: -.7rem;
+.description {
+  margin-top: -0.7rem;
   margin-left: 0.5rem;
-
 }
-.title{
- 
-  font-weight:bold;
-  
-
+.title {
+  font-weight: bold;
 }
 
+@media (max-width: 1280px) {
+  .sliderContainer {
+    margin: 0 auto;
+    max-width: 1600px;
+    padding: 0 20px;
+    height: 600px;
+  }
 
-@media (max-width: 1280px){
+  .card {
+    display: flex;
+    flex-direction: column;
 
-.sliderContainer {
-  margin: 0 auto;
-  max-width: 1600px;
-  padding: 0 20px;
-  height: 600px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    background-color: #fff;
+    height: 350px;
+    width: 390px;
+    border-radius: 10px;
+    /* box-shadow: 0 2px 8px rgba(34, 9, 9, 0.878); */
+  }
+  .bg {
+    background-color: #fff;
+    margin-top: 1rem;
+  }
 
-}
-
-.card {
- 
-  display: flex;
-  flex-direction: column;
-
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  background-color:#fff;
-  height: 350px;
-  width: 390px;
-  border-radius: 10px;
-  /* box-shadow: 0 2px 8px rgba(34, 9, 9, 0.878); */
-  
-}
-.bg{
-  background-color: #fff;
-  margin-top: 1rem;
-
-}
-
-.card img {
-  display: block;
-  margin: 0 auto;
-  max-width: 100%;
-  height: 25rem;
-  width: 500px;
-}
-.customerheading{
-  width: 100px;
-}
+  .card img {
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+    height: 25rem;
+    width: 500px;
+  }
+  .customerheading {
+    width: 100px;
+  }
 }
 
 @media only screen and (max-width: 589px) {
-  
   .card {
-
     display: flex;
     flex-direction: column;
-  
+
     margin-top: 1rem;
     margin-bottom: 1rem;
-    background-color:#fff;
+    background-color: #fff;
     height: 350px;
     width: 220px;
     border-radius: 10px;
     /* box-shadow: 0 2px 8px rgba(34, 9, 9, 0.878); */
-}
+  }
 
-
-.seeMore{
-  margin-left: 10rem;
-}
+  .seeMore {
+    margin-left: 10rem;
+  }
 }
