--- a/src/Component/Pages/Footer/Footer.module.css
+++ b/src/Component/Pages/Footer/Footer.module.css
@@ -83,7 +83,7 @@
 .twoheading {
   color: red;
   font-weight: bolder;
-  margin-right: 35px;
+  text-align: center;
 }
 
 .twoTwo {
@@ -104,6 +104,8 @@
   text-decoration: none;
   font-weight: bolder;
   margin-top: 1rem;
+  text-align: center;
+  margin-right: 100px;
 }
 .listmain {
   display: flex;
